feat:汉化页面变更

--- a/public/blocked.html
+++ b/public/blocked.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Block Site</title>
+  <title>网站拦截</title>
   <link rel="stylesheet" href="common.css">
   <link rel="stylesheet" href="blocked.css">
   <link rel="icon" type="image/png" href="icon_32.png">
@@ -13,11 +13,11 @@
 <body>
   <h1>
     <img src="icon_128.png">
-    <span>Block Site</span>
+    <span>网站拦截</span>
   </h1>
   <p id="message">&nbsp;</p>
   <br>
-  <a href="options.html">See Options</a>
+  <a href="options.html">查看选项</a>
 </body>
 
 </html>
