feat:添加汉化者信息

--- a/public/options.html
+++ b/public/options.html
@@ -73,6 +73,7 @@
 
   <p id="credits">
     由 <a target="_blank" href="https://github.com/penge">Pavel Bucka</a> 创建<br>
+    汉化者：<a target="_blank" href="https://github.com/15973081/">15973081</a><br>
     在 <a target="_blank" href="https://github.com/penge/block-site">GitHub</a> 上给网站拦截插件点个 <span id="star">★</span> 支持一下
   </p>
 </body>
