fix:操作页不显示bug

--- a/public/options.html
+++ b/public/options.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="options.css">
   <link rel="icon" type="image/png" href="icon_32.png">
-  <script type="module" src="options.mjs"></script>
+  <script type="module" src="options.js"></script>
 </head>
 <body>
   <div class="options-container">
