--- a/public/blocked.html
+++ b/public/blocked.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网站拦截 - 专注模式</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" type="image/png" href="icon_192.png">
     <style>
         /* 全局样式重置 */
         * {
