--- a/public/options.html
+++ b/public/options.html
@@ -104,9 +104,8 @@
     </div>
 
     <div class="credits">
-      <p>由 <a target="_blank" href="https://github.com/penge">Pavel Bucka</a> 创建</p>
-      <p>汉化者：<a target="_blank" href="https://github.com/15973081/">15973081</a></p>
-      <p>在 <a target="_blank" href="https://github.com/penge/block-site">GitHub</a> 上给网站拦截插件点个 <span class="star">★</span> 支持一下</p>
+      <p>由 <a target="_blank" href="https://github.com/15973081/">15973081</a> 创建</p>
+      <p>在 <a target="_blank" href="https://github.com/15973081/DistraCut-CN">GitHub</a> 上给网站拦截插件点个 <span class="star">★</span> 支持一下</p>
     </div>
   </div>
 </body>
