--- a/public/blocked.html
+++ b/public/blocked.html
@@ -6,336 +6,7 @@
     <title>网站拦截 - 专注模式</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon" type="image/png" href="icon_192.png">
-    <style>
-        /* 全局样式重置 */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* 根变量 */
-        :root {
-            --bg-gradient: linear-gradient(135deg, #0f0f17, #12121e);
-            --card-bg: rgba(30, 30, 50, 0.4);
-            --card-border: rgba(0, 212, 255, 0.12);
-            --neon-gradient: linear-gradient(135deg, #00d4ff, #7c3aed);
-            --neon-glow: 0 0 20px rgba(0, 212, 255, 0.5);
-            --text-primary: #ffffff;
-            --text-secondary: #a1a1aa;
-            --text-tertiary: #4b5563;
-            --button-bg: rgba(0, 212, 255, 0.1);
-            --button-border: rgba(0, 212, 255, 0.3);
-            --grid-color: rgba(255, 255, 255, 0.03);
-        }
-
-        /* 主容器 */
-        body {
-            font-family: "PingFang SC", "Microsoft YaHei", system-ui, sans-serif;
-            background: var(--bg-gradient);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            position: relative;
-        }
-
-        /* 背景网格效果 */
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-image: 
-                linear-gradient(to right, var(--grid-color) 1px, transparent 1px),
-                linear-gradient(to bottom, var(--grid-color) 1px, transparent 1px);
-            background-size: 50px 50px;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        /* 主要内容卡片 */
-        .blocking-container {
-            background: var(--card-bg);
-            backdrop-filter: blur(16px);
-            border: 1px solid var(--card-border);
-            border-radius: 24px;
-            padding: 4rem 3rem;
-            max-width: 90vw;
-            width: 1200px;
-            height: 675px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            position: relative;
-            z-index: 1;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            transition: all 0.3s ease;
-        }
-
-        /* 标题样式 */
-        .main-title {
-            font-size: 5rem;
-            font-weight: 900;
-            background: var(--neon-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            line-height: 1.1;
-            margin-bottom: 1.5rem;
-            letter-spacing: -0.02em;
-        }
-
-        /* 次标题样式 */
-        .sub-title {
-            font-size: 1.75rem;
-            font-weight: 600;
-            color: var(--text-primary);
-            margin-bottom: 3rem;
-            line-height: 1.3;
-        }
-
-        /* 被拦截信息样式 */
-        .blocked-info {
-            width: 100%;
-            max-width: 800px;
-            margin-bottom: 3rem;
-        }
-
-        .blocked-url {
-            font-size: 1.25rem;
-            color: var(--text-secondary);
-            margin-bottom: 1rem;
-            line-height: 1.4;
-        }
-
-        .blocked-url span {
-            font-family: 'Courier New', Courier, monospace;
-            background: rgba(0, 212, 255, 0.08);
-            padding: 0.25rem 0.5rem;
-            border-radius: 4px;
-            color: var(--text-primary);
-        }
-
-        /* 激励文案样式 */
-        .motivation-text {
-            font-size: 1.25rem;
-            color: var(--text-secondary);
-            margin-bottom: 3rem;
-            line-height: 1.6;
-            max-width: 600px;
-        }
-
-        /* 按钮样式 */
-        .back-button {
-            background: var(--button-bg);
-            border: 1px solid var(--button-border);
-            border-radius: 12px;
-            padding: 1rem 2.5rem;
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: var(--text-primary);
-            cursor: pointer;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-            margin-bottom: 1rem;
-        }
-
-        .back-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: var(--neon-gradient);
-            opacity: 0;
-            transition: all 0.3s ease;
-            z-index: -1;
-        }
-
-        .back-button:hover {
-            transform: scale(1.05);
-            box-shadow: var(--neon-glow);
-            border-color: rgba(0, 212, 255, 0.6);
-        }
-
-        .back-button:hover::before {
-            left: 0;
-            opacity: 0.2;
-        }
-
-        /* 选项链接样式 */
-        .options-link {
-            color: var(--text-tertiary);
-            text-decoration: none;
-            font-size: 1rem;
-            transition: color 0.3s ease;
-        }
-
-        .options-link:hover {
-            color: var(--text-secondary);
-            text-decoration: underline;
-        }
-
-        /* 操作按钮容器样式 */
-        .actions {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-            margin-bottom: 3rem;
-        }
-
-        /* 响应式设计 - 操作按钮容器 */
-        @media (max-width: 768px) {
-            .actions {
-                margin-bottom: 2rem;
-            }
-        }
-
-        /* 底部信息样式 */
-        .bottom-info {
-            margin-top: 3rem;
-            font-size: 1rem;
-            color: var(--text-tertiary);
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .focus-stats {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-        }
-
-        .icon {
-            font-family: 'Material Icons';
-            font-size: 1rem;
-            color: var(--text-tertiary);
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 1024px) {
-            .blocking-container {
-                width: 90vw;
-                height: auto;
-                min-height: 80vh;
-                padding: 3rem 2rem;
-            }
-
-            .main-title {
-                font-size: 4rem;
-            }
-
-            .sub-title {
-                font-size: 1.5rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .blocking-container {
-                padding: 2.5rem 1.5rem;
-                min-height: 90vh;
-            }
-
-            .main-title {
-                font-size: 3rem;
-            }
-
-            .sub-title {
-                font-size: 1.25rem;
-                margin-bottom: 2rem;
-            }
-
-            .blocked-info,
-            .motivation-text {
-                margin-bottom: 2rem;
-            }
-
-            .blocked-url,
-            .motivation-text {
-                font-size: 1.125rem;
-            }
-
-            .back-button {
-                padding: 0.75rem 2rem;
-                font-size: 1.125rem;
-            }
-
-            .bottom-info {
-                margin-top: 2rem;
-                font-size: 0.875rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .blocking-container {
-                padding: 2rem 1rem;
-                min-height: 95vh;
-            }
-
-            .main-title {
-                font-size: 2.5rem;
-            }
-
-            .sub-title {
-                font-size: 1.125rem;
-            }
-
-            .blocked-url,
-            .motivation-text {
-                font-size: 1rem;
-            }
-
-            .back-button {
-                padding: 0.75rem 1.5rem;
-                font-size: 1rem;
-            }
-        }
-
-        /* 动画效果 */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .blocking-container {
-            animation: fadeIn 0.8s ease-out forwards;
-        }
-
-        .main-title,
-        .sub-title,
-        .blocked-info,
-        .motivation-text,
-        .back-button,
-        .options-link,
-        .bottom-info {
-            animation: fadeIn 0.8s ease-out forwards;
-        }
-
-        .main-title { animation-delay: 0.1s; }
-        .sub-title { animation-delay: 0.2s; }
-        .blocked-info { animation-delay: 0.3s; }
-        .motivation-text { animation-delay: 0.4s; }
-        .back-button { animation-delay: 0.5s; }
-        .options-link { animation-delay: 0.5s; }
-        .bottom-info { animation-delay: 0.6s; }
-    </style>
+    <link rel="stylesheet" href="blocked.css">
 </head>
 <body>
     <div class="blocking-container">
