--- a/public/options.html
+++ b/public/options.html
@@ -13,7 +13,7 @@
   <div class="options-container">
     <h1 class="main-title">
       <span class="material-icons icon-large">lock</span>
-      <span>网站拦截</span>
+      <span></span>
     </h1>
 
     <h2 class="sub-title">专注模式设置</h2>
