fix:增加标记，根据标记进行替换/

--- a/public/options.html
+++ b/public/options.html
@@ -13,7 +13,7 @@
   <div class="options-container">
     <h1 class="main-title">
       <span class="material-icons icon-large">lock</span>
-      <span></span>
+      <span id="terminal-title"> </span>
     </h1>
 
     <h2 class="sub-title">专注模式设置</h2>
