feat:色差偏移效果，像素扭曲，废土风格

--- a/public/blocked.html
+++ b/public/blocked.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="blocking-container">
-        <h1 class="main-title">专注模式已启动</h1>
-        <h2 class="sub-title">此网站已被锁定，以保护你的高效时间</h2>
+        <h1 class="main-title chromatic-text" data-text="专注模式已启动">专注模式已启动</h1>
+        <h2 class="sub-title chromatic-text" data-text="此网站已被锁定，以保护你的高效时间">此网站已被锁定，以保护你的高效时间</h2>
         
         <div class="blocked-info">
             <p class="blocked-url" id="message"></p>
