--- a/public/options.html
+++ b/public/options.html
@@ -12,10 +12,10 @@
 <body>
   <div class="options-container">
     <h1 class="main-title">
-      <span id="terminal-title"> </span>
+      <span id="terminal-title" class="chromatic-text"> </span>
     </h1>
 
-    <h2 class="sub-title">专注模式设置</h2>
+    <h2 class="sub-title chromatic-text" data-text="专注模式设置">专注模式设置</h2>
 
     <div class="glass-card">
       <div class="section">
