feat:文本废土风

--- a/public/options.html
+++ b/public/options.html
@@ -103,8 +103,8 @@
     </div>
 
     <div class="credits">
-      <p>由 <a target="_blank" href="https://github.com/15973081/">15973081</a> 创建</p>
-      <p>在 <a target="_blank" href="https://github.com/15973081/DistraCut-CN">GitHub</a> 上给网站拦截插件点个 <span class="star">★</span> 支持一下</p>
+      <p>系统构建者: <a target="_blank" href="https://github.com/15973081/">15973081</a></p>
+      <p>前往 <a target="_blank" href="https://github.com/15973081/DistraCut-CN">github</a> 投递一枚 <span class="star">★</span>，为防护系统增能</p>
     </div>
   </div>
 </body>
